# DataStructs

./: .clang-format  .clang-tidy-ignore  .gitignore  CMakeLists.txt  README.md
DataStructs/: CMakeLists.txt  List.cpp  List.hpp  Queue.cpp  Result.hpp  Stack.cpp
DataStructs/include/: Config.hpp  List.hpp  Queue.hpp  Stack.hpp
cmake/: Scripts.cmake
include/: Test.hpp
src/: test.cpp
tests/: CMakeLists.txt  List.cpp  Queue.cpp  Stack.cpp
